# SystemCDemo

./: CMakeLists.txt  DMAC.h  DummyMaster.h  DummySlave.h  FindSystemC.cmake  Registerif.h  SystemCDemo.sln  SystemCDemo.vcxproj  SystemCDemo.vcxproj.filters  bus.h  gdpdebug.txt  main.cpp  memory.h  target.h  top.h
Doxy/SocPlatform/docbook/: _i_o_8h.xml  annotated.xml  class_so_c_platform.xml  dir_954afcef5d3df7c0ffb37389ff9fa477.xml  index.xml  top_8h.xml
Doxy/SocPlatform/html/: _i_o_8h.html  _i_o_8h.js  annotated.html  annotated_dup.js  class_so_c_platform-members.html  class_so_c_platform.html  class_so_c_platform.js  classes.html  dir_954afcef5d3df7c0ffb37389ff9fa477.html  dir_954afcef5d3df7c0ffb37389ff9fa477.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  hierarchy.js  menudata.js  navtreedata.js  navtreeindex0.js  top_8h.html  top_8h.js
Doxy/SocPlatform/latex/: _i_o_8h.tex  annotated.tex  class_so_c_platform.eps  class_so_c_platform.tex  dir_954afcef5d3df7c0ffb37389ff9fa477.tex  files.tex  hierarchy.tex  refman.tex  top_8h.tex
Doxy/common/docbook/: _d_m_a_c_8h.xml  _d_m_a_c_8h__incl.dot  _dummy_master_8h.xml  _dummy_master_8h__incl.dot  _dummy_slave_8h.xml  _dummy_slave_8h__incl.dot  _inverter_8h.xml  _inverter_8h__incl.dot  _registerif_8h.xml  _registerif_8h__dep__incl.dot  _registerif_8h__incl.dot  annotated.xml  bus_8h.xml  bus_8h__dep__incl.dot  bus_8h__incl.dot  class_b_u_s.xml  class_b_u_s_a16ca82e5cfab79220cf5e6c1289a32db_cgraph.dot  class_b_u_s_a23141eed3303128f9bc12f17bb2cde3c_icgraph.dot  class_b_u_s_a2bd0315abeeb4489fb9e21550de6036d_icgraph.dot  class_b_u_s_a679fda612be2cc0d4e4a21eba5606d55_cgraph.dot  class_b_u_s_a679fda612be2cc0d4e4a21eba5606d55_icgraph.dot  class_b_u_s_a872dace6d13b9a34aa31266b18d2f686_cgraph.dot  class_b_u_s_a872dace6d13b9a34aa31266b18d2f686_icgraph.dot  class_b_u_s_a88552c26c5911573660db4ee853cc521_icgraph.dot  class_d_m_a_c.xml  (+54 more)
SocPlatform/: CMakeLists.txt  IO.h  top.h
Test/: CMakeLists.txt  Register.h  TestList.h
Test/01_Bus/: tp_01_01.h
Test/02_Dmac/: Register.h  tp_02_01.h  tp_02_02.h
Test/03_Adder/: tp_03_01.h
Test/04_Counter/: tp_04_01.h
Test/05_Uart/: tp_05_01.h
Test/06_core/: riscv32_inst_mix.h  tp_06_01.h  tp_06_02.h
common/: CMakeLists.txt  DMAC.h  DummyMaster.h  DummySlave.h  Inverter.h  Registerif.h  bus.h  commondef.h  memory.h  target.h
common/core/RISCV32/: ALU.h  Inst_mem.h  commondef.h  data_mem.h  decode_inst.h  instruction.h  memory.h  register.h  registerbank.h  riscv32.h
common/core/RSCV32/: ALU.h  PC.h  instruction_mem.h  register.h  riscv32.h
docs/: Design.uml  NguyenDuyHuan-464595-Báo cáo kết quả công việc quý 3.pptx  SoCplatform_Integration_Manual.pptx  SoCplatform_Intergration_Manual.pptx  SystemCDesign.drawio
docs/BusMMIO/: BUSMMIO-DesignSpecification.doc
docs/DMAC/: .$DMAC.drawio.bkp  DMAC.drawio  DMAC_DesignSpecification.doc
docs/DummyMaster/: DummyMaster-DesignSpecification.doc
docs/DummySlave/: DummySlave_DesignSpecification.doc
docs/OverviewDesign/: SystemCDesign.drawio
docs/RISC-V/: riscv.drawio
docs/SoCPlatform/: RegisterIF-DesignSpecification.doc  SoCPlatform.drawio  SoCPlatformDemo-DesignSpecification.doc  ~$CPlatformDemo-DesignSpecification.doc
docs/outputs/: flowdiagram.drawio
docs/wrapper/: WrapperDesign.drawio
fw/risc-v/: Makefile  main.c  start.s
main/: CMakeLists.txt  main.cpp
models/: CMakeLists.txt
models/Adder/: Adder_wrapper.h  CMakeLists.txt
models/Adder/inc/: adder_four_bit_adder.h  full_adder_full_adder.h
models/Adder/src/: full_adder_full_adder.cpp
models/Counter/: CMakeLists.txt  Counter_wrapper.h
models/Counter/inc/: counter_counter.h
models/Counter/src/: counter_counter.cpp
models/Uart/: CMakeLists.txt  Uart_wrapper.h
models/Uart/inc/: address_decode_address_decode.h  clock_divider_clock_divider.h  control_operation_control_operation.h  cpu_interface_cpu_interface.h  serial_interface_serial_interface.h  status_registers_status_registers.h  uart_top_uart_top.h  xmit_rcv_control_xmit_rcv_control.h
models/Uart/src/: address_decode_address_decode.cpp  clock_divider_clock_divider.cpp  control_operation_control_operation.cpp  cpu_interface_cpu_interface.cpp  serial_interface_serial_interface.cpp  status_registers_status_registers.cpp  uart_top_uart_top.cpp  xmit_rcv_control_xmit_rcv_control.cpp
(+484 files in other folders)
